@@ -1,5 +1,6 @@
 2008-02-12  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* keyboard.c (read_avail_input):
 	* frame.c (Fdelete_frame): Call Fdelete_terminal.
 
 2008-02-11  Stefan Monnier  <monnier@iro.umontreal.ca>
